Bugfix für Firefox, in row--overflow wird nun wieder korrekt dargestelt

--- a/_updates.scss
+++ b/_updates.scss
@@ -59,3 +59,10 @@
   }
 }
 // --------------------------------------------------
+
+// VERSION 2.2.1
+// BASE/GRID
+.row--overflow {
+  grid-template-columns: repeat(var(--grid-columns), auto);
+}
+// --------------------------------------------------
